// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderDefinition > renders '.github/actions/oc-gate/action.yml' > .github/actions/oc-gate/action.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: OpenCode gate
description: Decide whether a comment should invoke an agent workflow. A composite step cannot appear in \`jobs.<id>.if:\`, so the job runs unconditionally and every step that needs the go/no-go reads \`steps.<id>.outputs.triggered\`. The gate itself is a tiny bash check — no checkout required.
inputs:
  allowed-users:
    description: Comma-separated login(s) allowed to trigger. Empty means anyone who wrote a trigger comment may invoke the agent.
    default: et0and
  require-label:
    description: Require the PR/issue to carry the \`opencode\` label.
    default: "false"
  triggers:
    description: Comma-separated trigger prefixes. A comment triggers when it starts with one, or contains it after a space (the original /oc and /opencode expressions). Workflows for other agents pass their own phrase.
    default: /oc,/opencode
outputs:
  triggered:
    description: true when the comment is an authorized trigger.
    value: \${{ steps.check.outputs.triggered }}
runs:
  using: composite
  steps:
    - name: Evaluate trigger
      id: check
      run: |-
        # Trigger check mirrors the original expressions per phrase: an
        # explicit leading phrase, or the phrase after a space anywhere.
        triggered="false"
        IFS=',' read -r -a triggers <<< "$TRIGGERS"
        for trigger in "\${triggers[@]}"; do
          [[ -z "$trigger" ]] && continue
          case "$BODY" in
            "$trigger"* | *" $trigger"*)
              triggered="true"
              break
              ;;
          esac
        done

        # Label gate: only PR-comments-style workflows opt in.
        if [[ "$triggered" == "true" && "$REQUIRE_LABEL" == "true" ]]; then
          if [[ ",$LABELS," != *",opencode,"* ]]; then
            triggered="false"
          fi
        fi

        # Author gate: empty means anyone; otherwise a comma-separated list.
        if [[ "$triggered" == "true" && -n "$ALLOWED" ]]; then
          case ",$ALLOWED," in
            *",$AUTHOR,"*) ;;
            *) triggered="false" ;;
          esac
        fi

        echo "triggered=$triggered" >> "$GITHUB_OUTPUT"
      shell: bash
      env:
        BODY: \${{ github.event.comment.body }}
        AUTHOR: \${{ github.event.comment.user.login }}
        ALLOWED: \${{ inputs.allowed-users }}
        LABELS: \${{ join(github.event.pull_request.labels.*.name, ',') }}, \${{ join(github.event.issue.labels.*.name, ',') }}
        REQUIRE_LABEL: \${{ inputs.require-label }}
        TRIGGERS: \${{ inputs.triggers }}
"
`;

exports[`renderDefinition > renders '.github/actions/setup/action.yml' > .github/actions/setup/action.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Setup repository
description: Provision Node 24, pin pnpm, restore the pnpm store cache, and install dependencies with --frozen-lockfile. One definition for every workflow so the setup block never drifts. Call after an explicit \`actions/checkout\` (local composite actions require the workspace to exist first).
inputs:
  install:
    description: Run \`pnpm install --frozen-lockfile\` after setup.
    default: "true"
  install-playwright:
    description: Also cache (~/.cache/ms-playwright) and install the Playwright chromium browser (e2e-only workflows).
    default: "false"
runs:
  using: composite
  steps:
    - uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020
      with:
        node-version: 24
    - uses: pnpm/action-setup@0977fd99725f1db4007ccb2928dbb4e90d06cc86
    - name: Resolve the pnpm store path
      run: echo "PNPM_STORE_PATH=$(pnpm store path)" >> "$GITHUB_ENV"
      shell: bash
    - name: Restore the pnpm store
      uses: actions/cache@55cc8345863c7cc4c66a329aec7e433d2d1c52a9
      with:
        path: \${{ env.PNPM_STORE_PATH }}
        key: \${{ runner.os }}-pnpm-store-\${{ hashFiles('pnpm-lock.yaml') }}
        restore-keys: \${{ runner.os }}-pnpm-store-
    - name: Install dependencies
      if: \${{ inputs.install == 'true' }}
      run: pnpm install --frozen-lockfile
      shell: bash
    - name: Cache Playwright browsers
      if: \${{ inputs.install-playwright == 'true' }}
      uses: actions/cache@55cc8345863c7cc4c66a329aec7e433d2d1c52a9
      with:
        path: ~/.cache/ms-playwright
        key: \${{ runner.os }}-ms-playwright-\${{ hashFiles('pnpm-lock.yaml') }}
    - name: Install Playwright browsers
      if: \${{ inputs.install-playwright == 'true' }}
      run: pnpm --filter @tom/e2e exec playwright install --with-deps chromium
      shell: bash
"
`;

exports[`renderDefinition > renders '.github/workflows/ci.yml' > .github/workflows/ci.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: CI
on:
  push:
    branches:
      - dev
  pull_request:
    branches:
      - dev
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    env:
      TURBO_API: https://turbo.infra.tom.so
      TURBO_TOKEN: \${{ secrets.TURBO_CACHE_TOKEN }}
      TURBO_TEAM: wwwtom
      TURBO_REMOTE_CACHE_SIGNATURE_KEY: \${{ secrets.TURBO_CACHE_SIGNATURE_KEY }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
      - uses: ./.github/actions/setup
      - name: Check generated DB types are current
        run: |-
          pnpm --filter @tom/db generate
          pnpm exec oxfmt --write packages/types/src/db.ts
          git diff --exit-code packages/types/src/db.ts
      - name: Check generated workflows are current
        run: |-
          pnpm workflows
          if [ -n "$(git status --porcelain -- .github/workflows .github/actions)" ]; then
            git status --short -- .github/workflows .github/actions
            git diff -- .github/workflows .github/actions
            exit 1
          fi
      - name: Run typecheck
        run: pnpm turbo run typecheck
      - name: Run lint
        run: pnpm turbo run lint
      - name: Run unit tests
        run: pnpm turbo run test
        env:
          ARENA_TOKEN: \${{ secrets.ARENA_TOKEN }}
"
`;

exports[`renderDefinition > renders '.github/workflows/classifier-review.y…' > .github/workflows/classifier-review.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Address classifier triage
on:
  issue_comment:
    types:
      - created
  pull_request_review_comment:
    types:
      - created
permissions:
  id-token: write
  contents: write
  pull-requests: write
  issues: write
concurrency:
  group: classifier-review-\${{ github.event.issue.number || github.event.pull_request.number }}
  cancel-in-progress: false
jobs:
  respond:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout repository
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          persist-credentials: false
      - name: Classifier gate
        id: gate
        uses: ./.github/actions/oc-gate
        with:
          allowed-users: et0and
          triggers: /classifier
      - name: Resolve the pull request number
        id: pr
        if: steps.gate.outputs.triggered == 'true'
        run: |-
          if [[ "\${{ github.event_name }}" == "pull_request_review_comment" ]]; then
            echo "number=\${{ github.event.pull_request.number }}" >> "$GITHUB_OUTPUT"
          elif jq -e '.issue.pull_request' "$GITHUB_EVENT_PATH" > /dev/null; then
            echo "number=\${{ github.event.issue.number }}" >> "$GITHUB_OUTPUT"
          fi
      - name: Address the triage
        if: steps.pr.outputs.number != ''
        uses: anomalyco/opencode/github@latest
        with:
          model: opencode-go/muse-spark-1.3-contributor
          mentions: /classifier
          prompt: |-
            Respond to the classifier.dev review triage on pull request
            #\${{ steps.pr.outputs.number }}. Triggered by
            @\${{ github.event.comment.user.login }}, who wrote:
            \${{ github.event.comment.body }}

            The PR carries one sticky comment whose first line is
            \`<!-- classifier-pr-review -->\` (posted by
            .github/workflows/pr-review.yml). Read it, then work through the
            files it groups under "needs careful review".

            For each flagged file:
            1. Read the file and the part of the PR diff that touches it.
            2. Review it for real defects and repo-standard violations
               (AGENTS.md, plus the nearest AGENTS.md in its directory).
            3. Fix genuine issues with the smallest correct change. When a
               flag is already handled, is not a real issue, or needs a
               human call, leave the code alone and say why.

            Do not touch unrelated code, do not merge, and do not edit
            .github/workflows/ or .github/actions/.

            Verify before pushing: \`pnpm turbo run typecheck\`,
            \`pnpm turbo run test\`, \`pnpm turbo run lint\`, \`pnpm format\`.

            Then commit (conventional commits), push to this PR's branch,
            and post exactly one comment on the PR: what you fixed, what you
            checked and left alone, and the verification results. If the
            sticky triage comment is missing, post one line saying so and
            stop.
        env:
          OPENCODE_API_KEY: \${{ secrets.OPENCODE_API_KEY }}
"
`;

exports[`renderDefinition > renders '.github/workflows/deploy.yml' > .github/workflows/deploy.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Deploy
on:
  push:
    branches:
      - dev
  workflow_dispatch:
    inputs:
      stage:
        description: Alchemy stage to deploy
        required: true
        type: choice
        options:
          - production
          - staging
          - dev
permissions:
  contents: read
concurrency:
  group: deploy-\${{ github.event_name == 'push' && 'staging' || inputs.stage }}
  cancel-in-progress: true
jobs:
  deploy:
    name: Deploy \${{ github.event_name == 'push' && 'staging' || inputs.stage }}
    runs-on: ubuntu-latest
    environment: \${{ github.event_name == 'push' && 'staging' || inputs.stage }}
    env:
      ALCHEMY_STAGE: \${{ github.event_name == 'push' && 'staging' || inputs.stage }}
      CLOUDFLARE_ACCOUNT_ID: \${{ secrets.CLOUDFLARE_DEFAULT_ACCOUNT_ID }}
      CLOUDFLARE_API_TOKEN: \${{ secrets.CLOUDFLARE_API_TOKEN }}
      TOM_SECRETS: \${{ secrets.TOM_SECRETS }}
      AXIOM_TOKEN: \${{ secrets.AXIOM_TOKEN }}
      ALCHEMY_ENV_FILE: /dev/null
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
      - uses: ./.github/actions/setup
      - name: Deploy infrastructure
        run: |-
          pnpm deploy:shared --yes &&
          pnpm deploy:api --yes &&
          pnpm deploy:adapter --yes &&
          pnpm deploy:web --yes &&
          pnpm deploy:sophie --yes
"
`;

exports[`renderDefinition > renders '.github/workflows/e2e.yml' > .github/workflows/e2e.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: E2E (fixture store)
on:
  pull_request:
    branches:
      - dev
  schedule:
    - cron: 17 2 * * *
  workflow_dispatch: null
permissions:
  contents: read
  actions: read
concurrency:
  group: e2e-\${{ github.event.pull_request.number || github.ref }}
  cancel-in-progress: true
jobs:
  playwright:
    name: Playwright (tom.so fixture store)
    runs-on: ubuntu-latest
    timeout-minutes: 30
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
      - uses: ./.github/actions/setup
        with:
          install-playwright: "true"
      - name: Run e2e suite
        run: pnpm --filter @tom/e2e test:e2e
        env:
          CI: "true"
          SIMULATOR_URL: http://127.0.0.1:8789
      - name: Upload Playwright report
        if: failure()
        uses: actions/upload-artifact@043fb46d1a93c77aae656e7c1c64a875d1fc6a0a
        with:
          name: playwright-report
          path: apps/e2e/playwright-report/
          retention-days: 7
      - name: Upload test traces
        if: failure()
        uses: actions/upload-artifact@043fb46d1a93c77aae656e7c1c64a875d1fc6a0a
        with:
          name: test-results
          path: apps/e2e/test-results/
          retention-days: 7
"
`;

exports[`renderDefinition > renders '.github/workflows/opencode.yml' > .github/workflows/opencode.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: opencode
on:
  issue_comment:
    types:
      - created
  pull_request_review_comment:
    types:
      - created
jobs:
  opencode:
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
      pull-requests: write
      issues: write
    steps:
      - name: Checkout repository
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          persist-credentials: false
      - name: OpenCode gate
        id: oc
        uses: ./.github/actions/oc-gate
        with:
          allowed-users: et0and
      - name: Run opencode
        if: steps.oc.outputs.triggered == 'true'
        uses: anomalyco/opencode/github@latest
        with:
          model: deepseek/deepseek-v4-flash-0731
        env:
          OPENCODE_API_KEY: \${{ secrets.OPENCODE_API_KEY }}
"
`;

exports[`renderDefinition > renders '.github/workflows/pr-comments.yml' > .github/workflows/pr-comments.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Respond to PR Comments
on:
  issue_comment:
    types:
      - created
  pull_request_review_comment:
    types:
      - created
jobs:
  respond:
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: write
      pull-requests: write
      issues: write
    steps:
      - name: Checkout repository
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          persist-credentials: false
      - name: OpenCode gate
        id: oc
        uses: ./.github/actions/oc-gate
        with:
          allowed-users: ""
          require-label: "true"
      - name: Get PR info
        id: pr
        if: steps.oc.outputs.triggered == 'true'
        run: |-
          if [[ "\${{ github.event_name }}" == "pull_request_review_comment" ]]; then
            echo "pr_number=\${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
          else
            echo "pr_number=\${{ github.event.issue.number }}" >> $GITHUB_OUTPUT
          fi
      - name: Run opencode with thread context
        if: steps.oc.outputs.triggered == 'true'
        uses: anomalyco/opencode/github@latest
        with:
          model: deepseek/deepseek-v4-flash-0731
          prompt: |-
            Respond to this comment on PR #\${{ steps.pr.outputs.pr_number }}.

            Comment from @\${{ github.event.comment.user.login }}:
            > \${{ github.event.comment.body }}

            The PR was created by the "Create PR from Prompt" workflow. Please:
            1. Review the context of the discussion
            2. Make any requested changes if appropriate
            3. Respond clearly to the comment

            When making changes:
            - Commit with a clear message referencing the comment
            - Push to the existing branch
            - Only modify files relevant to the request
        env:
          OPENCODE_API_KEY: \${{ secrets.OPENCODE_API_KEY }}
      - name: Reply with summary
        if: always() && steps.oc.outputs.triggered == 'true'
        run: |-
          if [[ "\${{ job.status }}" == "success" ]]; then
            gh pr comment \${{ steps.pr.outputs.pr_number }} --body "✅ I've processed your request. Check the latest commits for changes."
          else
            gh pr comment \${{ steps.pr.outputs.pr_number }} --body "❌ Something went wrong while processing your request. Please check the workflow logs."
          fi
        env:
          GH_TOKEN: \${{ github.token }}
"
`;

exports[`renderDefinition > renders '.github/workflows/pr-review.yml' > .github/workflows/pr-review.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: PR review triage
on:
  pull_request:
    branches:
      - dev
    types:
      - opened
      - synchronize
      - reopened
      - ready_for_review
permissions:
  contents: read
  pull-requests: write
concurrency:
  group: pr-review-\${{ github.event.pull_request.number }}
  cancel-in-progress: false
jobs:
  triage:
    name: Triage changed files
    runs-on: ubuntu-latest
    if: github.event.pull_request.draft == false && github.event.pull_request.head.repo.fork == false
    steps:
      - name: Checkout base branch
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          ref: \${{ github.event.pull_request.base.sha }}
          persist-credentials: false
      - uses: ./.github/actions/setup
        with:
          install: "false"
      - name: Classify changed files and upsert the sticky comment
        run: |-
          # On the PR that introduces this workflow the base branch has no
          # script yet; skip until it lands there.
          if [ ! -f scripts/pr-review.ts ]; then
            echo "scripts/pr-review.ts not on the base branch yet; skipping."
            exit 0
          fi
          node scripts/pr-review.ts \\
            --repo="\${{ github.repository }}" \\
            --pr=\${{ github.event.pull_request.number }}
        env:
          GH_TOKEN: \${{ github.token }}
  address:
    name: Address the triage
    runs-on: ubuntu-latest
    needs: triage
    if: (github.event.action == 'opened' || github.event.action == 'ready_for_review') && github.actor == 'et0and'
    permissions:
      id-token: write
      contents: write
      pull-requests: write
    steps:
      - name: Checkout base branch
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          ref: \${{ github.event.pull_request.base.sha }}
          persist-credentials: false
      - name: Address the triage
        uses: anomalyco/opencode/github@latest
        with:
          model: opencode-go/muse-spark-1.3-contributor
          prompt: |-
            Respond to the classifier.dev review triage on this pull request.

            The sticky comment whose first line is
            \`<!-- classifier-pr-review -->\`, posted by this workflow, groups
            the changed files by review attention. Work through the files it
            lists under "needs careful review".

            For each flagged file:
            1. Read the file and the part of the diff that touches it.
            2. Review it for real defects and repo-standard violations
               (AGENTS.md, plus the nearest AGENTS.md in its directory).
            3. Fix genuine issues with the smallest correct change. When a
               flag is already handled, is not a real issue, or needs a
               human call, leave the code alone and say why.

            Do not touch unrelated code, do not merge, and do not edit
            .github/workflows/ or .github/actions/.

            Verify before pushing: \`pnpm turbo run typecheck\`,
            \`pnpm turbo run test\`, \`pnpm turbo run lint\`, \`pnpm format\`.

            Then commit (conventional commits), push to this PR's branch, and
            keep the response short: what you fixed, what you checked and
            left alone, and the verification results. If the sticky triage
            comment is missing, say so in one line and stop.
        env:
          OPENCODE_API_KEY: \${{ secrets.OPENCODE_API_KEY }}
"
`;

exports[`renderDefinition > renders '.github/workflows/preview.yml' > .github/workflows/preview.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: PR preview
on:
  pull_request:
    branches:
      - dev
    types:
      - opened
      - synchronize
      - reopened
      - closed
permissions:
  contents: read
  issues: write
  pull-requests: write
concurrency:
  group: preview-\${{ github.event.pull_request.number }}
  cancel-in-progress: true
jobs:
  deploy:
    name: Deploy PR preview
    runs-on: ubuntu-latest
    if: github.event.action != 'closed'
    env:
      ALCHEMY_STAGE: pr-\${{ github.event.pull_request.number }}
      PULL_REQUEST: \${{ github.event.pull_request.number }}
      CLOUDFLARE_ACCOUNT_ID: \${{ secrets.CLOUDFLARE_DEFAULT_ACCOUNT_ID }}
      CLOUDFLARE_API_TOKEN: \${{ secrets.CLOUDFLARE_API_TOKEN }}
      TOM_SECRETS: \${{ secrets.TOM_SECRETS }}
      AXIOM_TOKEN: \${{ secrets.AXIOM_TOKEN }}
      ALCHEMY_ENV_FILE: /dev/null
      GITHUB_TOKEN: \${{ github.token }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
      - uses: ./.github/actions/setup
      - name: Deploy preview stage
        run: |-
          pnpm deploy:shared --yes &&
          pnpm deploy:api --yes &&
          pnpm deploy:adapter --yes &&
          pnpm deploy:web --yes &&
          pnpm deploy:sophie --yes
  destroy:
    name: Destroy PR preview
    runs-on: ubuntu-latest
    if: github.event.action == 'closed'
    env:
      ALCHEMY_STAGE: pr-\${{ github.event.pull_request.number }}
      PULL_REQUEST: \${{ github.event.pull_request.number }}
      CLOUDFLARE_ACCOUNT_ID: \${{ secrets.CLOUDFLARE_DEFAULT_ACCOUNT_ID }}
      CLOUDFLARE_API_TOKEN: \${{ secrets.CLOUDFLARE_API_TOKEN }}
      TOM_SECRETS: \${{ secrets.TOM_SECRETS }}
      AXIOM_TOKEN: \${{ secrets.AXIOM_TOKEN }}
      ALCHEMY_ENV_FILE: /dev/null
      GITHUB_TOKEN: \${{ github.token }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          ref: dev
      - uses: ./.github/actions/setup
      - name: Destroy web preview stage
        run: pnpm destroy:web --yes
      - name: Destroy editor preview stage
        if: always()
        run: pnpm destroy:editor --yes
      - name: Destroy sophie preview stage
        if: always()
        run: pnpm destroy:sophie --yes
      - name: Destroy adapter preview stage
        if: always()
        run: pnpm destroy:adapter --yes
      - name: Destroy api preview stage
        if: always()
        run: pnpm destroy:api --yes
      - name: Destroy shared preview stage
        if: always()
        run: pnpm destroy:shared --yes
"
`;

exports[`renderDefinition > renders '.github/workflows/preview-storybook.y…' > .github/workflows/preview-storybook.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Storybook preview
on:
  pull_request:
    branches:
      - dev
    types:
      - opened
      - synchronize
      - reopened
      - closed
permissions:
  contents: read
  issues: write
  pull-requests: write
concurrency:
  group: storybook-preview-\${{ github.event.pull_request.number }}
  cancel-in-progress: true
jobs:
  deploy:
    name: Deploy Storybook preview
    runs-on: ubuntu-latest
    if: github.event.action != 'closed'
    env:
      ALCHEMY_STAGE: pr-\${{ github.event.pull_request.number }}
      PULL_REQUEST: \${{ github.event.pull_request.number }}
      CLOUDFLARE_ACCOUNT_ID: \${{ secrets.CLOUDFLARE_DEFAULT_ACCOUNT_ID }}
      CLOUDFLARE_API_TOKEN: \${{ secrets.CLOUDFLARE_API_TOKEN }}
      ALCHEMY_ENV_FILE: /dev/null
      GITHUB_TOKEN: \${{ github.token }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
      - uses: ./.github/actions/setup
      - name: Deploy Storybook preview stage
        run: pnpm deploy:storybook --yes
  destroy:
    name: Destroy Storybook preview
    runs-on: ubuntu-latest
    if: github.event.action == 'closed'
    env:
      ALCHEMY_STAGE: pr-\${{ github.event.pull_request.number }}
      PULL_REQUEST: \${{ github.event.pull_request.number }}
      CLOUDFLARE_ACCOUNT_ID: \${{ secrets.CLOUDFLARE_DEFAULT_ACCOUNT_ID }}
      CLOUDFLARE_API_TOKEN: \${{ secrets.CLOUDFLARE_API_TOKEN }}
      ALCHEMY_ENV_FILE: /dev/null
      GITHUB_TOKEN: \${{ github.token }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          ref: dev
      - uses: ./.github/actions/setup
      - name: Destroy Storybook preview stage
        run: pnpm destroy:storybook --yes
"
`;

exports[`renderDefinition > renders '.github/workflows/preview-sweep.yml' > .github/workflows/preview-sweep.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Sweep orphan PR previews
on:
  schedule:
    - cron: 41 3 * * *
  workflow_dispatch: null
permissions:
  contents: read
  pull-requests: read
concurrency:
  group: preview-sweep
  cancel-in-progress: false
jobs:
  sweep:
    name: Destroy previews of closed PRs
    runs-on: ubuntu-latest
    env:
      CLOUDFLARE_ACCOUNT_ID: \${{ secrets.CLOUDFLARE_DEFAULT_ACCOUNT_ID }}
      CLOUDFLARE_API_TOKEN: \${{ secrets.CLOUDFLARE_API_TOKEN }}
      TOM_SECRETS: \${{ secrets.TOM_SECRETS }}
      AXIOM_TOKEN: \${{ secrets.AXIOM_TOKEN }}
      ALCHEMY_ENV_FILE: /dev/null
      GITHUB_TOKEN: \${{ github.token }}
      GH_TOKEN: \${{ github.token }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
      - uses: ./.github/actions/setup
      - name: Destroy preview stages of recently closed PRs
        run: |-
          cutoff=$(date -u -d '14 days ago' +%Y-%m-%dT%H:%M:%SZ)
          prs=$(gh pr list --state closed --limit 100 --json number,closedAt \\
            | jq -r --arg cutoff "$cutoff" '.[] | select(.closedAt > $cutoff) | .number')
          if [ -z "$prs" ]; then
            echo "No recently closed PRs; nothing to sweep."
            exit 0
          fi
          for pr in $prs; do
            echo "Sweeping preview stage pr-$pr"
            export ALCHEMY_STAGE="pr-$pr" PULL_REQUEST="$pr"
            pnpm destroy:storybook --yes || true
            pnpm destroy:web --yes || true
            pnpm destroy:editor --yes || true
            pnpm destroy:sophie --yes || true
            pnpm destroy:adapter --yes || true
            pnpm destroy:api --yes || true
            pnpm destroy:shared --yes || true
          done
"
`;

exports[`renderDefinition > renders '.github/workflows/release.yml' > .github/workflows/release.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Release
on:
  push:
    branches:
      - dev
permissions:
  contents: write
  issues: write
  pull-requests: write
  id-token: write
jobs:
  release:
    name: Release
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          fetch-depth: 0
          persist-credentials: true
      - uses: ./.github/actions/setup
      - name: Fetch all tags and ensure branch is up to date
        run: |-
          git fetch --tags
          git checkout dev
          git pull origin dev
      - name: Build
        run: pnpm run build
      - name: Release
        run: pnpm run semantic-release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`renderDefinition > renders '.github/workflows/srht.yml' > .github/workflows/srht.yml 1`] = `
"# GENERATED FILE - DO NOT EDIT.
# Regenerate with: pnpm workflows
name: Mirror to SourceHut
on:
  push:
    branches:
      - dev
jobs:
  mirror:
    runs-on: ubuntu-slim
    steps:
      - uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1
        with:
          fetch-depth: 0
      - name: Setup SSH
        run: |-
          mkdir -p ~/.ssh
          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
          chmod 600 ~/.ssh/id_rsa
          ssh-keyscan git.sr.ht >> ~/.ssh/known_hosts || { sleep 5; ssh-keyscan git.sr.ht >> ~/.ssh/known_hosts; }
        env:
          SSH_PRIVATE_KEY: \${{ secrets.SOURCEHUT_SSH_KEY }}
      - name: Mirror to SourceHut
        run: |-
          git remote add sourcehut git@git.sr.ht:~tomupom/wwwtom
          git push sourcehut dev --force
          git push sourcehut --all --force
          git push sourcehut --tags --force
"
`;
